# huspacy

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  Pipfile  README.md  mkdocs.yml  out  pyproject.toml  train.sh  train_w_docker.sh
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build.yml  docs.yml  huspacy.yml  release.yml  test.yml  test_models.yml
data/: Makefile
docs/: contact.md  faq.md  gen_models_pages.py  gen_ref_pages.py  index.md  update_readme.py  updated_readme.py
docs/examples/: anonymizer.md  dbpedia.md  keyphrase.md  relation.md
docs/huspacy/: changelog.md  contributing.md  develop.md  installation.md  license.md  publications.md  quickstart.md  under_the_hood.md  usage_in_r.md
docs/models/: changelog_lg.md  changelog_md.md  changelog_trf.md  changelog_trf_xl.md  develop_lg.md  develop_md.md  develop_trf.md  develop_trf_xl.md  index.md  readme_lg.md  readme_md.md  readme_trf.md  readme_trf_xl.md
docs/recipes/: emmorph.md  faq.md  nerpp.md  nounphrases.md  roman_nums.md  sentencizer.md  sentiment.md
docs/stylesheets/: extra.css
hu_core_news_lg/: .bumpversion.cfg  .gitignore  CHANGELOG.md  DEVELOP.md  README.md  meta.json  project.yml  pyproject.toml  sweep.yml
hu_core_news_lg/configs/: assemble.cfg  ner.cfg  parser-w-senter.cfg  parser.cfg  parser_ud.cfg  sweep_ner.yml  sweep_parser.yml  tagger.cfg  transformer.cfg
hu_core_news_md/: .bumpversion.cfg  CHANGELOG.md  README.md  meta.json  project.yml  pyproject.toml
hu_core_news_md/configs/: assemble.cfg  ner.cfg  parser.cfg  parser_ud.cfg  sweep_ner.yml  sweep_parser.yml  sweep_tagger.yml  tagger.cfg
hu_core_news_trf/: .bumpversion.cfg  .gitignore  CHANGELOG.md  DEVELOP.md  README.md  meta.json  project.yml  pyproject.toml  sweep.yml  sweep_parser.yml  sweep_tagger.yml
hu_core_news_trf/configs/: all_components_exceptner.cfg  assemble.cfg  fin.cfg  hyperparams_desc.txt  lemmatizer.cfg  ner.cfg  parser.cfg  parser_biaffine.cfg  sweep_.yml  sweep_ner.yml  sweep_parser.yml  sweep_tagger.yml  tagger.cfg  tagger_lemma.cfg  transformer.cfg
hu_core_news_trf_xl/: .bumpversion.cfg  CHANGELOG.md  DEVELOP.md  README.md  meta.json  project.yml  pyproject.toml
hu_core_news_trf_xl/configs/: assemble.cfg  ner.cfg  parser.cfg  sweep_tagger.yml  tagger.cfg
hu_core_web_lg/: project.yml
hu_core_web_lg/configs/: stock-tagger.cfg
hu_vectors/: .gitignore  README.md  project.yml
hu_vectors/configs/: assemble.cfg  ner.cfg  ner_wo_pretrain.cfg  parser_pt_tagger.cfg  tagger_lemmatizer.cfg  tagger_lemmatizer_bilstm.cfg  tagger_parser_lemmatizer.cfg
hu_vectors_web_lg/: CHANGELOG.md  README.md  project.yml  pyproject.toml
hu_vectors_web_md/: .gitignore  CHANGELOG.md  README.md  project.yml  pyproject.toml
huspacy/: .bumpversion.cfg  CHANGELOG.md  DEVELOPMENT.md  components.py  pyproject.toml  setup.cfg
huspacy/cli/: convert2conllu.py  convert_to_conllu.py  debug_sentencizer.py  merge_eval_jsons.py  split_conllu.py  split_szeged_ner.py  train_lemmy.py
huspacy/cli/benchmarks/: huspacyv3_benchmark.py  udpipe_benchmark.py
huspacy/cli/resources/: questions-words-hu.txt
huspacy/cli/scripts/: convert_hunerwiki2conll.sh
huspacy/huspacy/: __init__.py  utils.py
huspacy/huspacy/components/: __init__.py  edit_tree_lemmatizer.py  hun_sentencizer.py  lemma_postprocessing.py  lookup_lemmatizer.py  nerpp.py  sentiment.py
huspacy/huspacy/extra/: __init__.py  roman_num_converter.py  sentencizer.py
huspacy/huspacy/integrations/: __init__.py
huspacy/huspacy/resources/: poltext_sentiment.json  precognox_sentiment.json
huspacy/test/: test_huspacy.py  test_lemma_postprocessing.py  test_models.py  test_nerpp.py  test_sentencizer.py  test_sentiment_lexicon.py
huspacy/tests/: test_huspacy.py  test_lemma_postprocessing.py  test_lookup_lemmatizer.py  test_nerpp.py  test_roman_nums.py  test_sentencizer.py  test_sentiment.py
huspacy/tools/: components.py  custom_code.py  edit_tree_lemmatizer.py
huspacy/tools/components/: lemma_postprocessing.py  lookup_lemmatizer.py
meta_package/: LICENSE  MANIFEST.in  setup.py
models/: Makefile
models/hu_core_news_lg/: .gitignore  README.md  project.yml
models/hu_core_news_lg/configs/: base.cfg  default.cfg
models/hu_core_web_lg/: README.md  concat.sh  project.yml
models/hu_core_web_lg/configs/: default.cfg  stock.cfg  ud-clone.cfg  ud-tagger.cfg
resources/: hu_core_news_lg.json  package_init.py
scripts/: backup.sh  benchmark.sh  benchmark_readme.md  conll18_ud_eval.py  convert2conll.sh  convertConnlup.py  convert_iob1_2_iob2.sh  convert_iobes_2_iob2.awk  convert_nerkor2iob.sh  emNER_eval.py  eval_vectors.py  huspacy_components.py  huspacyv3_benchmark.py  link_best_model.py  mcnemar_eval.py  multihead_removal.py  preprocess_webcorpus.py  preprocess_webcorpus2.py  process_webcorpus2.sh  smoke_test.py  tag_model.py  train_lookup_lemmatizer.py
scripts/NER_data_analysis/: check_corpora_sentence_distribution.py  new_szegedner_preproc.py  split_set_into_sentence_length.py
scripts/NER_data_analysis/spacy_bert_diff/: README.md  add_entities_multi_label.py  check_the_lines.py  comparison_of_our_own_system_with_emBERT.py  convert_html_to_iob.py  pred_repair.py  preprocess_gold.py
scripts/NER_data_analysis/spacy_bert_diff/visualization/: diff2html.py  ipymarkup_html_custom.py  spacy_bert_check_differences.py
src/: Dockerfile
src/cli/: train_lemmy.py
src/emtsv/: Dockerfile
src/model_builder/: __main__.py  eval.py  io.py  ner.py
src/models/: __main__.py
src/resources/: package_init.py  release_notes.md  ud_lg_meta.json  ud_meta.json  vectors_meta.json
src/tests/: smoke_test.py
tagger_parser_ud/configs/: base.cfg
test/: test_sentencizer.py
tools/: analyse_corpus.py  components.py  en_noun_chunks.py  hu_noun_chunks.py  hunnpchunker.py  np_chunk.py  print_doc.py  sandbox.py
tools/cli/: find_corpus_errors.py  split_conllu.py  split_szeged_ner.py
tools/cli/benchmarks/: emtsv_benchmark.py  huspacyv2_benchmark.py  huspacyv3_benchmark.py  stanza_benchmark.py
