[tool.poetry]
name = "hu_core_news_lg"
version = "1.0"
description = "Hungarian word vectors"
authors = ["SzegedAI, MILAB <gyorgy@orosz.link>"]
license = "cc-by-sa-4.0"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "~3.2.3"
spacy-huggingface-hub = "^0.0.6"
wandb = "^0.10.23"
wheel = "^0.37.0"
contexttimer = "^0.3.3"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=1.1.10", "pip>=21.2.4"]
build-backend = "poetry.masonry.api"
