[tool.poetry]
name = "huspacy"
version = "0.5.1"
description = "HuSpaCy: industrial strength Hungarian natural language processing"
authors = ["SzegedAI, MILAB <gyorgy@orosz.link>"]
maintainers = ["György Orosz <gyorgy@orosz.link>"]
keywords = ["nlp", "huspacy", "Hungarian", "text processing", "text processing", "language processing", "text mining",
    "tokenization", "sentence boundary detection", "sbd", "sentence splitting", "pos tagging", "tagging",
    "lemmatization", "ner", "named entity recognition", "parsing", "word embeddings", "word vectors",
    "spacy", "spacy model"]
license = "Apache-2.0"
homepage = "https://github.com/huspacy/huspacy"
repository = "https://github.com/huspacy/huspacy"
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Human Machine Interfaces',
    'Topic :: Scientific/Engineering :: Information Analysis',
]
packages = [
    { include = "huspacy" },
]


[tool.poetry.dependencies]
python = "^3.8"
importlib_resources = { version = "*", python = "<3.9" }
transformers = { version="^4.24.0", extras = ["hf"] }
spacy-alignments = { version="^0.8.6", extras = ["hf"] }


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
spacy = "^3.2.3"
bump2version = "^1.0.1"
pytest = "^7.0.0"
flake8 = "*"
twine = "^4.0.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
lazydocs = "^0.4.8"
pytest_codeblocks = "^0.14.0"
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.6"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-gen-files = "^0.4.0"
mkdocs-autorefs = "^0.4.1"


[build-system]
requires = [
    "poetry-core>=1.2.0",
    "wheel"
]
build-backend = "poetry.core.masonry.api"
