[tool.poetry]
name = "huspacy"
version = "0.9.0"
description = "HuSpaCy: industrial strength Hungarian natural language processing"
authors = ["SzegedAI, MILAB <gyorgy@orosz.link>"]
maintainers = ["György Orosz <gyorgy@orosz.link>"]
keywords = ["nlp", "huspacy", "Hungarian", "text processing", "text processing", "language processing", "text mining",
    "tokenization", "sentence boundary detection", "sbd", "sentence splitting", "pos tagging", "tagging",
    "lemmatization", "ner", "named entity recognition", "parsing", "word embeddings", "word vectors",
    "spacy", "spacy model"]
license = "Apache-2.0"
homepage = "https://github.com/huspacy/huspacy"
repository = "https://github.com/huspacy/huspacy"
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Human Machine Interfaces',
    'Topic :: Scientific/Engineering :: Information Analysis',
]
packages = [
    { include = "huspacy" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
packaging = "^21.3"
importlib_resources = { version = "*", python = "<3.9" }
transformers = { version = "^4.24.0", optional = true }
spacy-alignments = { version = "^0.8.6", optional = true }
torch = { version = "*", optional = true }
benepar = { version = "0.2.0", optional = true}
#emmorphpy = { url = "https://github.com/nytud/emmorphpy/releases/download/v1.1.0/emmorphpy-1.1.0-py3-none-any.whl", optional = true}
#emmorph2ud2 = {url = "https://github.com/vadno/emmorph2ud2/releases/download/v1.0.1/emmorph2ud2-1.0.1-py3-none-any.whl", optional = true}

[tool.poetry.extras]
trf = ["transformers", "spacy-alignments", "torch"]
np = ["benepar"]
#morph = ["emmorphpy", "emmorph2ud2"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
spacy = "^3.2.3"
bump2version = "^1.0.1"
pytest = "^7.0.0"
flake8 = "*"
twine = "^4.0.0"
### Quirks ###
importlib-metadata = "<5"  # https://github.com/PyCQA/flake8/issues/1701

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
lazydocs = "^0.4.8"
pytest_codeblocks = "^0.14.0"
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.6"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-gen-files = "^0.4.0"
mkdocs-autorefs = "^0.4.1"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-ra -v -m 'not slow'"
testpaths = [
    "tests",
]

[build-system]
requires = [
    "poetry-core>=1.5.1",
    "wheel"
]
build-backend = "poetry.core.masonry.api"
