[tool.poetry]
name = "huspacy"
version = "0.12.0"
description = "HuSpaCy: industrial strength Hungarian natural language processing"
authors = ["SzegedAI, MILAB <gyorgy@orosz.link>"]
maintainers = ["György Orosz <gyorgy@orosz.link>"]
keywords = ["nlp", "huspacy", "Hungarian", "text processing", "text processing", "language processing", "text mining",
    "tokenization", "sentence boundary detection", "sbd", "sentence splitting", "pos tagging", "tagging",
    "lemmatization", "ner", "named entity recognition", "parsing", "word embeddings", "word vectors",
    "spacy", "spacy model"]
license = "Apache-2.0"
homepage = "https://github.com/huspacy/huspacy"
repository = "https://github.com/huspacy/huspacy"
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Human Machine Interfaces',
    'Topic :: Scientific/Engineering :: Information Analysis',
]
packages = [
    { include = "huspacy" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
packaging = "^21.3"
transformers = { version = "^4.24.0", optional = true }
spacy-alignments = { version = "^0.8.6", optional = true }
torch = { version = "*", optional = true }
benepar = { version = "0.2.0", optional = true}
#emmorphpy = { url = "https://github.com/nytud/emmorphpy/releases/download/v1.1.0/emmorphpy-1.1.0-py3-none-any.whl", optional = true}
#emmorph2ud2 = {url = "https://github.com/vadno/emmorph2ud2/releases/download/v1.0.1/emmorph2ud2-1.0.1-py3-none-any.whl", optional = true}

[tool.poetry.extras]
trf = ["transformers", "spacy-alignments", "torch"]
np = ["benepar"]
morph = ["emmorphpy", "emmorph2ud2"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
spacy = "3.7.5"
bump2version = "~1.0.1"
pytest = "~8.3.3"
ruff = "~0.7.1"
#twine = "~4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
lazydocs = "~0.4.8"
pytest_codeblocks = "~0.17.0"
mkdocs = "~1.6.1"
mkdocs-material = "~9.5.42"
mkdocs-git-revision-date-localized-plugin = "~1.3.0"
mkdocstrings = { extras = ["python"], version = "~0.26.2" }
mkdocs-gen-files = "~0.5.0"
mkdocs-autorefs = "~1.2.0"
mkdocs-meta-descriptions-plugin = "~3.0.0"
cffconvert = "~2.0.0"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-ra -v -m 'not slow'"
testpaths = [
    "tests",
]

[build-system]
requires = [
    "poetry-core>=1.8.1",
    "wheel"
]
build-backend = "poetry.core.masonry.api"
